--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
     <div class="profile" id="profile">
       <div class="profile-container">
         <img
-          src="C:\Users\BSC 25\Desktop\Praveen\Document from 🥀 (2).jpg"
+          src="Document from 🥀 (2).jpg"
           alt="img"
           height="300px"
           width="300px"
