--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
     <div class="profile" id="profile">
       <div class="profile-container">
         <img
-          src="https://github.com/Praveenkumar261105/digital-portfolio/blob/main/assets.jpg"
+          src="C:\Users\BSC 25\Desktop\Praveen\assets.jpg"
           alt="img"
           height="300px"
           width="300px"
