--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -344,7 +345,7 @@
     <div class="profile" id="profile">
       <div class="profile-container">
         <img
-          src="C:\Users\BSC 25\Desktop\Praveen\assets.jpg"
+          src="PRAVEEN.jpg"
           alt="img"
           height="300px"
           width="300px"
@@ -355,7 +356,7 @@
           <span>College Student</span>
           
           <div class="resume">
-            <a href="C:\Users\BSC 25\Desktop\Praveen\img\resumee.pdf"
+            <a href="RESUME.pdf"
               >Download</a
             >
 
@@ -419,7 +420,7 @@
       </div>
      
        <div class="resume">
-      <a href="C:\Users\BSC 25\Desktop\Praveen\img\resumee.pdf"
+      <a href="RESUME.pdf"
         >Resume</a
       >
     </footer>
