--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
     <div class="profile" id="profile">
       <div class="profile-container">
         <img
-          src="PRAVEEN.jpg"
+          src="P"
           alt="img"
           height="300px"
           width="300px"
@@ -356,7 +356,7 @@
           <span>College Student</span>
           
           <div class="resume">
-            <a href="RESUME.pdf"
+            <a href="PRAVEEN.pdf"
               >Download</a
             >
 
@@ -420,7 +420,7 @@
       </div>
      
        <div class="resume">
-      <a href="RESUME.pdf"
+      <a href="PRAVEEN.pdf"
         >Resume</a
       >
     </footer>
