--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
     <div class="profile" id="profile">
       <div class="profile-container">
         <img
-          src="P"
+          src="PRAVEEN.jpg"
           alt="img"
           height="300px"
           width="300px"
