--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
           <span>College Student</span>
           
           <div class="resume">
-            <a href="PRAVEEN.pdf"
+            <a href="RESUME .pdf"
               >Download</a
             >
 
@@ -420,7 +420,7 @@
       </div>
      
        <div class="resume">
-      <a href="PRAVEEN.pdf"
+      <a href="RESUME .pdf"
         >Resume</a
       >
     </footer>
