--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
     </div>
     <div class="project" id="project">
       <h2>Projects</h2>
-    <p>  <a href="https://67da7a386c77491c7d3cf07e--chic-peony-3cdf02.netlify.app/">RESUME</a></p>
+    <p>  <a href="https://67da7a386c77491c7d3cf07e--chic-peony-3cdf02.netlify.app/">Digital-Portfolio</a></p>
       <hr />
     </div>
     <div class="Technical-certificates">
